[project]
name = "n2cat"
version = "0.1.0"
description = "n2cat"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_guild_patch", "nonebot_plugin_gocqhttp"]
plugin_dirs = []
builtin_plugins = ["echo"]
